# ExamSimulation

./: CMakeLists.txt  README.md
src/: MyVector.hpp  Student.hpp  main.cpp
tests/: CMakeLists.txt  test.cpp
